proparse/src/test/resources/data/errors/test01.p
def var x1 as int.

quit.
